@@ -1,5 +1,9 @@
+2019-05-30  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* who-is-on-app.rkt: ryuto-circuit へのリンク
+
 2019-05-21  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
-	
+
 	* 0.17.1 refactoring
 	get /stays/:user under construction
 
